--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "Other"
   ],
   "repository": {
-    "url": ""
+    "url": "https://github.com/abhafez/ttd-test-jump"
   },
   "activationEvents": [],
   "icon": "switcher.png",
