--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ttd-test-jump",
+  "publisher": "AbdurrahmanHafez",
   "displayName": "ttd-test-jump",
   "description": "",
   "author": {
